--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -18,6 +18,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11701694.md#1" target="_blank">全球最适合居住及就业城市 台北重登冠军</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11701694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a352c5ee0e1838818d6848c55923d60a-150x120.jpg" align ="left"></a>根据旅外人士交流网站InterNations调查，台湾首都台北荣登2019年全球最适合居住和就业的城市排行榜榜首，睽违2年重回冠军宝座。其中，成为冠军最重要的原因是旅外人士认为“台北整体生活品质高”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11702627.md#1" target="_blank">高以翔猝逝 浙江卫视《追我吧》永久停播</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11702627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020718061487-150x120.jpg" align ="left"></a>今天（12月5日），有消息称，浙江卫视将永久停播《追我吧》节目。此前台湾艺人高以翔在录制此节目时不幸猝逝。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11701699.md#1" target="_blank">百度又曝丑闻 收钱推广假药 逾五千人受骗</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11701699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9e0d556bcec963c0587ddf34dbb3db62-600x400-150x120.jpg" align ="left"></a>由李彦宏掌舵的大陆搜索引擎百度丑闻不断。近日百度再卷入推广假药案，该案案发至今全国共有5000多人受骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/9/n11710960.md#1" target="_blank">台最高检：境外资金介入总统大选 全来自中国</a><br></h3>距离2020年总统、立法委员大选倒数32天，针对大选查贿制暴执行成果，其中值得注意的是境外资金介选部分，据最高检察署统计，介选的境外资金多来自中国，且针对总统部分是100%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/9/n11709969.md#1" target="_blank">女子谎称误吞奶茶吸管 医生取出30厘米催吐管</a><br></h3>日前，22岁的广州女子小卢前往医院就诊，说自己喝奶茶时不小心将吸管吞入食道。医生检查发现，所谓的“吸管”竟宽约19厘米、长约30厘米。小卢才说，她吞进去的是网购的催吐管。医生告诫，盲目插管对内脏的伤害非常大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/9/n11709669.md#1" target="_blank">被曝性侵的上海财大副教授 辞三公司董事</a><br></h3>被曝性侵女硕士生的上海财经大学副教授钱逢胜，两天内辞去三间上市公司独立董事的职务，原因均为“因个人原因”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 12:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/9/n11709631.md#1" target="_blank">每日三退声明精选（2019/12/08）</a><br></h3>我是一名员警家属，知道我们那里有炼法轮功的被残酷迫害，今听到真相，我决定退出中共邪党的少先队组织，并且要给丈夫讲清真相，不让他参与迫害好人，选择美好未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:06 AM							</td></tr>
@@ -32,6 +33,5 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/6/n11704422.md#1" target="_blank">石家庄一中学教练被家长刺死 曾是省男排主力</a><br></h3>近日，石家庄一所重点中学的男排主教练、前河北男排主力二传手马某，被一位队员家长杀害。初步调查，原因是该家长与马某在对孩子训练问题产生矛盾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11703047.md#1" target="_blank">江苏男子掐死8岁亲生儿子 网民吁严惩</a><br></h3>大陆乱象万千。近期，江苏宿迁一名男子朱某杀害自己刚满8岁的儿子，而后却辩称儿子身体不好，帮他解脱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11701612.md#1" target="_blank">被爆扫楼式筹款 “水滴筹”陷信用危机</a><br></h3>中国重病众筹平台“水滴筹”近日被曝陷入信任危机，平台审查不严格，又没有相关法律对互联网筹款平台进行监管，民众担心捐款人被消费、被欺骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/5/n11701627.md#1" target="_blank">每日三退声明精选（2019/12/04）</a><br></h3>从近几个月香港的反送中运动，看出港府与中共的残暴，暴露出其流氓本性的一面。同时也让我看到美国政府和人民善良友好、尊重人权民主的普世价值的立国理念。我决定不与邪恶为伍，站在正义者一边，退出邪恶的团、队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 10:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/osnkrv285/djy/blob/master/gb/ncid282_5.md#1<br><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncid282_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/ncid282_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_5.htm">http://www.epochtimes.com/gb/ncid282_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
