--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11744430.md#1" target="_blank">培养孩子理财能力 从小开始</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11744430.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_135292016_Subscription_L-150x120.jpg" align ="left"></a>在瞬息万变的世界里，教孩子如何理财日益重要。具备良好的理财能力，有助于孩子更好应对成年后遇到的经济挑战。培养理财意识和能力宜从小开始，在日常生活中随处都可向孩子示范预算、花销和储蓄的基本意识，帮助他们养成良好的消费习惯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 3:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/12/24/n3466807.md#1" target="_blank">【圣诞画作赏析】查理?勒布杭《牧羊人的礼拜》</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/12/24/n3466807.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/12/1280px-Le_Brun_Charles_-_Adoration_of_the_Shepherds_-_1689-150x120.jpg" align ="left"></a>即将迈向新的一年，但在这之前我们要先迎接让大人小孩欢心喜悦的日子，众多基督徒们庆祝耶稣基督降生的庆祝日─圣诞节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 2:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11743755.md#1" target="_blank">一方沃土孕育《平安夜》 两百年后光环依旧</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11743755.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_0464-1-150x120.jpg" align ="left"></a>1818年，201前的圣诞夜，在德奥边界离萨尔茨堡大约20公里的奥地利小城奥本多夫（Oberndorf）的圣．尼古劳斯教堂里，一曲《平安夜》（Stille Nacht，heilige Nacht）横空问世，逐渐成为世界上同一天被演唱次数最多的一首歌曲——圣诞之夜，全世界都在演唱这首歌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:47 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11719794.md#1" target="_blank">问王羲之“入木三分” 笔力如何造就？</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11719794.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/02/bda4db1c72f1b4b84a6568a65bfb1393-150x120.jpg" align ="left"></a>“入木三分”成语来自哪个名家真实故事？后人借此成语来比喻评论深刻中肯，或是描写精到生动。“入木三分”本是形容什么呢？“入木三分”其来有自，是扎扎实实的突破表层深入内里的功夫！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:40 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11749446.md#1" target="_blank">诗歌：愁</a><br></h3>滴滴雨声落檐头 寞寞夜半梦中愁 天上人间多少盼 又有多少盼未酬......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748750.md#1" target="_blank">实战风水术专栏讲座系列之一</a><br></h3>
 
 咦？是谈“精神”文化吗？不是，谈“金神”文化。
