--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741034.md#1">【新闻看点】习访澳魂系香港 3真相北京心凉</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/20/n11735906.md#1">北京强颁“限狗令” 大批爱犬被“安乐死”</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749390.md#1">东方觉：辛苦农民工 讨薪路上难</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748931.md#1">陆客：在大陆政治学习学出三个更正</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737584.md#1">李旭彤：挖掘五千年文明惊世宝藏（11）</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748173.md#1">高天韵：南亚海啸15年 2020灾害预言会否成真</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747262.md#1">任重：中共外汇告急 民间资本加速外逃</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747187.md#1">常忍：中共让杀人犯成为“标兵”“英模”</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746948.md#1">袁斌：禁过圣诞 说明毛时代正在逆袭！</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11745896.md#1">夏小强：孙小果再获死刑 背后靠山是谁？</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
