--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749651.md#1">【2019盘点】中共社会监控的极端化</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748096.md#1">【翻墙必看】华为产品价格便宜的内幕</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749335.md#1">大庆油罐车爆炸致4死 官方14天未通报</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738475.md#1">【2019盘点】中美交锋之财经风云录</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748267.md#1">【珍言真语】梁家杰：林郑可做的最后一搏</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播预告】新唐人电视台2020跨年缤纷夜</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747758.md#1">陆银行花式吸金：磨刀、送猪肉、拦路、高息</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747807.md#1">【珍言真语】徐家健：星火事件令投资者却步</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749205.md#1">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748802.md#1">郭台铭：美中科技战刚开始 台湾应把握机遇</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749026.md#1">老挝坠入中共债务陷阱 负债超过GDP一半</a><br>
