--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11740076.md#1" target="_blank">程晓容：上海囚徒求救信再揭中共奴工黑幕</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11740076.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/2019-5-21-fox-11-program_08-ss-150x120.jpg" align ="left"></a>求救信见诸媒体的同一天，卡片销售商、英国最大零售商乐购（Tesco）迅速做出回应，宣布暂时停止在中国的一家工厂的生产，并展开调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11739433.md#1" target="_blank">隋志：调查活摘器官 科学家入榜“十大”</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11739433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/3-23-1-150x120.jpg" align ="left"></a>近日全球知名的《自然》杂志网站，发表了二零一九年对科学最具影响力的十大科学家，其中包括找出新方法、揭露中共从事非法器官移植的澳大利亚麦格理大学（Macquarie University）临床伦理学教授温蒂?罗杰斯（Wendy Rogers）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 6:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11740049.md#1" target="_blank">吴惠林：有感于2019年诺贝尔经济学奖</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11740049.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1175845229-600x400-150x120.jpg" align ="left"></a>10月14日，2019年诺贝尔奖最后一个奖项—经济学奖得主揭晓，由美、法三位学者合得。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 6:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744701.md#1" target="_blank">吕锡民：台湾是否加入RCEP的研议</a><br></h3>区域全面经济伙伴关系协定（Regional Comprehensive Economic Partnership，RCEP）历经7年28回合谈判，已在今（2019）年11月宣布完成协议，明（2020）年即将正式签署。RCEP是由东南亚国家协会十国（ASEAN）发起，由中国、日本、韩国、印度、澳洲、纽西兰等，与东盟有FT.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11739870.md#1" target="_blank">【思想领袖】戴耀廷：香港抗议者的智慧（下）</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11739870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/EET-Benny-Tai-150x120.jpg" align ="left"></a>12月1日，英文《大纪元时报》节目《美国思想领袖》（American Thought Leader）主持人杨杰凯（Jan Jekielek）赴香港进行采访。香港大学法律系副教授戴耀延在接受专访时表示：如果香港的一些官员对香港自治和法治造成的一切损害负有责任，那么他们就应该承担这个责任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 4:17 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744185.md#1" target="_blank">陈思敏：中国经济好坏 国企利润透端倪</a><br></h3>12月23日，中共财政部公布今年前11个月全国（中央和地方）国有及国有控股企业（不含国有一级金融企业在内）主要经济指标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744054.md#1" target="_blank">田园：请进化论信徒提供进化论的证据</a><br></h3>如果你和进化论信徒讨论生命是否神创，他们通常会问你：你有证据吗？创世纪神话以及宗教经典不能算作证据。一般来说，谈话会就此结束。进化论信徒会洋洋自得：我们赢了，科学再一次战胜迷信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 12:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743530.md#1" target="_blank">张林：汉人纷纷逃出新疆</a><br></h3>为了驯化新疆人，这些年，中共除了关押200万新疆人，进行残酷折磨，还用各种办法增加新疆的汉人数量。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 3:35 AM			</td></tr>
